--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Export to Excel",
-  "description": "Export to Excel",
-  "repository": "https://github.com/wallabyway/bim360appstore-xls-exporter",
+  "name": "BIM 360 Visual Reports",
+  "description": "BIM 360 Visual Reports",
+  "repository": "https://github.com/augustogoncalves/bim360appstore-viewer-nodejs-visual.reports",
   "logo": "https://avatars0.githubusercontent.com/u/8017462?v=3&s=200",
   "keywords": [
     "express",
@@ -23,6 +23,5 @@
       "value": "https://<<YOUR HEROKU APP NAME HERE>>.herokuapp.com/api/forge/callback/oauth"
     }
   },
-  "website": "https://bim360xls-exporter.herokuapp.com/",
   "success_url": "/"
 }
