--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "body-parser": "*",
-    "bootstrap": "*",
+    "body-parser": "1.17.2",
+    "bootstrap": "3.3.7",
     "clipboard": "^1.7.1",
-    "cookie-parser": "*",
-    "express": "*",
-    "express-session": "*",
-    "forge-apis": "^0.3.0",
-    "jquery": "*",
-    "jstree": "*",
-    "moment": "*",
+    "cookie-parser": "1.4.3",
+    "express": "4.15.3",
+    "express-session": "1.15.3",
+    "forge-apis": "0.4.1",
+    "jquery": "3.2.1",
+    "jstree": "3.3.4",
+    "moment": "2.18.1",
     "request": "^2.81.0"
   },
   "repository": {
