--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "chart.js": "^2.8.0",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
     "forge-apis": "^0.4.3"
